--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -200,12 +200,12 @@
             <div class="left-align" style="margin-left: 10px; margin-right: 15px;">
                 <p>
                     <h5>
-                        <span ng-bind="tools_info_name"></span>/<span ng-bind="tools_info_version"></span><span
-                            ng-show="!tools_info_editable">/<span ng-bind="tools_info_edit"></span></span>
+                        <span ng-bind="workflows_info_name"></span><span
+                            ng-show="!workflows_info_editable">/<span ng-bind="workflows_info_edit"></span></span>
                     </h5>
                     <small class="form-text text-muted">
-                        <span ng-bind="tool_info_username"></span>
-                        <span ng-show="!tools_info_editable">, created at <span
+                        <span ng-bind="workflows_info_username"></span>
+                        <span ng-show="!workflows_info_editable">, created at <span
                                 ng-bind="tool_info_created_at"></span></span>
                         <span ng-show="tools_info_forked_from">, forked from <a href
                                 ng-click="tools_search_show_item(tools_info_forked_from)"><span
@@ -219,10 +219,10 @@
                     <a id="collapseAllBtn2" class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px"
                         data-position="bottom" data-tooltip="Collapse All"><i class="material-icons">expand_less</i></a>
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
-                        data-tooltip="Save" ng-click="tool_create_save_pressed()" ng-show="tools_info_editable"><i
+                        data-tooltip="Save" ng-click="workflows_create_save_pressed()" ng-show="workflows_info_editable"><i
                             class="material-icons">save</i></a>
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
-                        data-tooltip="Fork" ng-click="tool_info_fork_pressed()" ng-show="!tools_info_editable"
+                        data-tooltip="Fork" ng-click="workflows_info_fork_pressed()" ng-show="!workflows_info_editable"
                         ng-class="{'disabled': !username}"><i class="material-icons">device_hub</i></a>
                 </div>
             </div>
