added cytoscape in index.html

--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -118,6 +118,8 @@
 	<script src="/static/app/d3.v4.min.js" type="text/javascript" charset="utf-8"></script>
 
 	<script src="/static/app/WebCola-3.3.8/WebCola/cola.min.js" type="text/javascript" charset="utf-8"></script>
+
+	<script src="/static/app/cytoscape.js-3.4.0/dist/cytoscape.min.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 
