--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -19,7 +19,7 @@
             </ul>
             <!-- Profile dropdown content -->
             <ul id="profile" class="dropdown-content">
-                <li><a href="#!"><i class="material-icons">person</i>Profile</a></li>
+                <li><a href ng-click="navbar_profile_clicked()"><i class="material-icons">person</i>Profile</a></li>
                 <li><a href="#!"><i class="material-icons">mail_outline</i>Inbox</a></li>
                 <li><a href="#!"><i class="material-icons">notifications</i>Notifications</a></li>
                 <li><a href="#!"><i class="material-icons">settings</i>Settings</a></li>
@@ -31,7 +31,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a id="signInBtn" href="#signModal" class="modal-trigger">Sign in</a></li>
                 <li class="divider"></li>
-                <li><a href="#!">Profile</a></li>
+                <li><a href ng-click="navbar_profile_clicked()">Profile</a></li>
                 <li><a href="#!">Inbox</a></li>
                 <li><a href="#!">Notifications</a></li>
                 <li><a href="#!">Settings</a></li>
