--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -233,9 +233,15 @@
             <!-- --------------------------------------------------------------------------------------- -->
             <!-- ------------------------------------ Graph -------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------------- -->
+            <!--
             <div class="row">
                 <div id="d3wf"></div>
             </div>
+            -->
+            <div class="row">
+                <div id="cywf"></div>
+            </div>
+
             <hr>
             <!-- --------------------------------------------------------------------------------------- -->
             <!-- ------------------------------- Edit Workflow ----------------------------------------- -->
