--- a/OpenBioC/app/static/app/OBC.css
+++ b/OpenBioC/app/static/app/OBC.css
@@ -74,10 +74,26 @@ pre {
 }
 
 #cywf {
-  overflow: auto;
-  border: 1px solid red;
+/*  overflow: auto; */
+/* position: absolute; */
+/* left: 0; */
+/* top: 0; */
+
+  border: 1px solid red; 
   height: 400px;  
+/*  width: 100%; */
+
+/*
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+*/
+
 }
+
+
 
 
 /* https://getbootstrap.com/docs/4.1/examples/sticky-footer/ */
