--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -115,11 +115,20 @@
 	<link rel="stylesheet" href="/static/app/OBC.css" type="text/css"/>
 	<script src="/static/app/ace-builds-1.4.1/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 
+	<!--
 	<script src="/static/app/d3.v4.min.js" type="text/javascript" charset="utf-8"></script>
-
 	<script src="/static/app/WebCola-3.3.8/WebCola/cola.min.js" type="text/javascript" charset="utf-8"></script>
+	-->
 
+	<!-- cytoscape 3.4.0 -->
 	<script src="/static/app/cytoscape.js-3.4.0/dist/cytoscape.min.js" type="text/javascript" charset="utf-8"></script>
+	
+
+	<!-- cytoscape 3.4.2 
+	<script src="/static/app/cytoscape.js-3.4.2/dist/cytoscape.min.js" type="text/javascript" charset="utf-8"></script>
+	-->	
+
+
 </head>
 <body>
 
