workflows edit step logic

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -218,6 +218,8 @@
                         data-position="bottom" data-tooltip="Fit">Fit</a>
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px"
                         data-position="bottom" data-tooltip="Clear">Clear</a>
+                    <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px"
+                        data-position="bottom" data-tooltip="Add Step" ng-click="workflow_info_add_step_clicked()">Add Step</a>                    
                     <a id="expandAllBtn2" class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px"
                         data-position="bottom" data-tooltip="Expand All"><i class="material-icons">expand_more</i></a>
                     <a id="collapseAllBtn2" class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px"
@@ -247,29 +249,32 @@
             <!-- ------------------------------- Edit Workflow ----------------------------------------- -->
             <!-- --------------------------------------------------------------------------------------- -->
             <ul id="editWorkflowAccordion" class="collapsible expandable faster" style="margin-top:0px;">
-                <li class="disabled">
+                <li> <!-- class="disabled" --> 
                     <div class="collapsible-header">
                         <i class="material-icons arrow">keyboard_arrow_right</i>
                         <i class="material-icons">place</i>
-                        Edit (name)
+                        Step
                     </div>
                     <div class="collapsible-body">
-                        <p>(bash commands)</p>
                         <div class="row">
                             <form class="col s12">
+                                UGLY ERROR MESSAGE!!
                                 <div class="input-field col s12">
                                     <input id="editWorkflowName" type="text" class="validate" ng-model="workflows_step_name">
                                     <label for="editWorkflowName">Name</label>
                                 </div>
+                                <div id="workflow_step_editor"></div>
+                                <!-- 
                                 <div class="input-field col s12">
                                     <textarea id="editWorkflowDescription"
                                         class="validate materialize-textarea" ng-model="workflows_step_description"></textarea>
                                     <label for="editWorkflowDescription">Description</label>
                                 </div>
+                                -->
                                 <div class="row col s12">
                                     <div class="col s3 offset-s9">
-                                        <a class="waves-effect waves-light btn" style="margin:2px">cancel</a>
-                                        <a class="waves-effect waves-light btn" style="margin:2px">save</a>
+                                        <a class="waves-effect waves-light btn" style="margin:2px">Cancel</a>
+                                        <a class="waves-effect waves-light btn" style="margin:2px" ng-click="workflow_step_add()">Add</a>
                                     </div>
                                 </div>
                             </form>
