--- a/OpenBioC/app/static/app/OBC.css
+++ b/OpenBioC/app/static/app/OBC.css
@@ -55,6 +55,15 @@ Part taken from: https://bootstrapious.com/p/bootstrap-sidebar
     margin-top: 5px;
 }
 
+#workflow_step_editor {
+    height: 200px;
+    border: 1px solid #DDD;
+    border-radius: 4px;
+    border-bottom-right-radius: 0px;
+    margin-top: 5px;
+    
+}
+
 /* https://stackoverflow.com/a/8306643/5626738 */ 
 pre {
     white-space: pre-wrap;
