close children fix bugs

--- a/OpenBioC/app/static/app/OBC.css
+++ b/OpenBioC/app/static/app/OBC.css
@@ -115,6 +115,7 @@ pre {
 */
 
 /* D3 / WebCola */
+/*
 .node {
   stroke: #515151;
   stroke-width: 0.5px;
@@ -152,7 +153,7 @@ pre {
         cursor: move;
     }
 
-
+*/
 /*
 
 .node {
