--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -114,6 +114,8 @@
 	
 	<link rel="stylesheet" href="/static/app/OBC.css" type="text/css"/>
 	<script src="/static/app/ace-builds-1.4.1/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/static/app/ace-builds-1.4.1/src-min-noconflict/ext-language_tools.js" type="text/javascript" charset="utf-8"></script>
+
 
 	<!--
 	<script src="/static/app/d3.v4.min.js" type="text/javascript" charset="utf-8"></script>
