--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -154,9 +154,10 @@
 
 <div class="profile_container" ng-show="profile_container_show">
 
-	PROFILE!!
+	<!-- PROFILE!! -->
+	{% include "app/profile.html" %}
 
-	<a href ng-click="profile_save_pressed()">SAVE</a>
+	<!-- <a href ng-click="profile_save_pressed()">SAVE</a> -->
 
 </div>
 
