--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -152,7 +152,7 @@
 
 </div>
 
-<div class="profile_container" ng-show="profile_container_show">
+<div ng-show="profile_container_show">
 
 	<!-- PROFILE!! -->
 	{% include "app/profile.html" %}
