--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -8,7 +8,7 @@
             <a id="navMenuBtn" href="#" data-target="mobile-nav" class="sidenav-trigger right black-text"><i class="material-icons">menu</i></a>
             <!-- Navbar Content -->
             <ul id="main-nav" class="right hide-on-med-and-down">
-                <li><a class="black-text" href="#">Home</a></li>
+                <li><a class="black-text" href ng-click="navbar_home_clicked()">Home</a></li>
                 <li ng-show="!username"><a href="#signModal" id="signInBtn" class="modal-trigger black-text" ng-click="navbar_signup_pressed()">Sign in</a></li> <!-- href="#signModal" -->
                 <li ng-show="username">
                     <a class="dropdown-trigger valign-wrapper black-text" href="#" data-target="profile">
