--- a/OpenBioC/app/templates/app/profile.html
+++ b/OpenBioC/app/templates/app/profile.html
@@ -1,4 +1,4 @@
-<div class="row container" id="content">
+<div class="row container left-align">
     <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
     <!-- -------------------------------------------------------------- ScrollSpy ------------------------------------------------------------------------ -->
     <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
@@ -31,7 +31,7 @@
                                     <form class="col s12">
                                         <div class="row valign-wrapper">
                                             <div class="col s3">
-                                                <img src="img/img_avatar.png" alt=""
+                                                <img src="/static/app/images/konstantina/img_avatar.png" alt=""
                                                     data-target='editProfileImgDropdown'
                                                     class="responsive-img dropdown-trigger circle">
                                                 <ul id='editProfileImgDropdown' class='dropdown-content'>
