--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -125,7 +125,16 @@
 	<!-- cytoscape 3.4.0 -->
 	<script src="/static/app/cytoscape.js-3.4.0/dist/cytoscape.min.js" type="text/javascript" charset="utf-8"></script>
 	
-
+	<!--cytoscape tooltip -->
+	<script src="/static/app/popper.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/static/app/cytoscape-popper.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/static/app/tippy.min.js" type="text/javascript" charset="utf-8"></script>
+	<!--cytoscape tooltip css-->
+	<link rel="stylesheet" href="/static/app/tippy.css" />
+	
+	<!-- cytoscape menu -->
+	<script src="/static/app/cytoscape-cxtmenu.js" type="text/javascript" charset="utf-8"></script>
+	
 	<!-- cytoscape 3.4.2 
 	<script src="/static/app/cytoscape.js-3.4.2/dist/cytoscape.min.js" type="text/javascript" charset="utf-8"></script>
 	-->	
