profile page bug fixed

--- a/OpenBioC/app/static/app/konstantina/css/style.css
+++ b/OpenBioC/app/static/app/konstantina/css/style.css
@@ -199,8 +199,8 @@ nav {
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 
-.row .col {
-    float: none;
+#profileContent {
+    float: right;
 }
 
 /* Class for when element is above threshold */
