--- a/OpenBioC/app/templates/app/profile.html
+++ b/OpenBioC/app/templates/app/profile.html
@@ -13,7 +13,7 @@
             </ul>
         </div>
     </div>
-    <div class="col s12 m12 l10">
+    <div id="profileContent" class="col s12 m12 l10">
         <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
         <!-- ------------------------------------------------------- Profile --------------------------------------------------------------------------------- -->
         <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
